# tscrape

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
tscrape/: __init__.py  bias.py  cli.py  config.py  discovery.py  filters.py  media.py  models.py  proxy.py  scraper.py  storage.py
tscrape/backends/: __init__.py  base.py  telethon_backend.py  web_backend.py
