[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tscrape"
version = "1.2.0"
description = "Modern Telegram Channel Scraper with discovery, filtering, and proxy rotation (2026)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "TScrape"}
]
keywords = ["telegram", "scraper", "telethon", "osint", "data-collection", "proxy", "socks5", "network-analysis", "cti", "threat-intelligence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Internet",
]
dependencies = [
    "telethon>=1.34.0",
    "pyarrow>=15.0.0",
    "pandas>=2.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "aiohttp>=3.9.0",
    "python-socks[asyncio]>=2.4.0",
]

[project.optional-dependencies]
fast = ["cryptg>=0.4.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
tscrape = "tscrape.cli:main"

[project.urls]
Homepage = "https://github.com/tscrape/tscrape"
Repository = "https://github.com/tscrape/tscrape"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
